@@ -9,6 +9,6 @@ public interface CanInline
   /** Inline an application of this Procedure and return result.
    * Can return original expression.
    */
-  public Expression inline (ApplyExp exp);
+  public Expression inline (ApplyExp exp, ExpWalker walker);
 }
 
